Correção Demo VB6
Correção na demo de VB6

--- a/demonstracoes/vb6/cteConfig.ini
+++ b/demonstracoes/vb6/cteConfig.ini
@@ -1,12 +1,13 @@
-[CTE]
-UF=
-CNPJ=
-NomeCertificado=
-ArquivoServidoresHom=C:\Program Files\TecnoSpeed\CTe\Demo\cteServidoresHom.ini
-ArquivoServidoresProd=C:\Program Files\TecnoSpeed\CTe\Demo\cteServidoresProd.ini
+[CTe]
+UF=PR
+CNPJ=08187168000160
+NomeCertificado=CN=TECNOSPEED SA:08187168000160, OU=Certificado PJ A1, O=ICP-Brasil, C=BR, S=, L=, E=, SE=6D 8C 19 04 25 53 86 82
+
+ArquivoServidoresHom=C:\Program Files\TecnoSpeed\CTe\Arquivos\cteServidoresHomSVC.ini
+ArquivoServidoresProd=C:\Program Files\TecnoSpeed\CTe\Arquivos\cteServidoresProd.ini
 TipoCertificado=File
-DiretorioEsquemas=C:\Program Files\TecnoSpeed\CTe\Demo\Esquemas\
-DiretorioTemplates=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\
+DiretorioEsquemas=C:\Program Files\TecnoSpeed\CTe\Arquivos\Esquemas
+DiretorioTemplates=C:\Program Files\TecnoSpeed\CTe\Arquivos\Templates
 DiretorioLog=Log\
 DiretorioLogErro=
 DiretorioTemporario=
@@ -15,26 +16,25 @@ Repositorio=CURRENT_USER_STORE
 ValidarEsquema=1
 PINCODE=
 VersaoManual=3.00
-MaxSizeLoteEnvio=500
-DiretorioXmlTomadorServico=XmlTomadorServico\
+MaxSizeFileEnvio=500
+DiretorioXmlTomadorServico=\XMLTomadorServico
 AnexarDactePDF=1
 IgnoreInvalidCertificates=1
-TimeOut=0
+TimeOut=30000
 Usuario=
 Senha=
 ConexaoSegura=1
 Proxy=
-ModoOperacao=NORMAL
+ModoOperacao=Normal
 CaminhoCertificado=
 SenhaCertificado=
-
 
 [DACTE]
 ModeloRetrato=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\3.00\DACTE\Retrato.rtm
 ModeloRTMCCe=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\cce\Impressao\modeloCCe.rtm
-LogotipoEmitente=tecnospeed.jpg
+LogotipoEmitente=C:\Users\emanoel.oliveira\Downloads\13-12-2018\tecno.jpg
 FraseHomologacao=SEM VALOR FISCAL
-ModeloPaisagem=
+ModeloPaisagem=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\3.00\DACTE\Paisagem.rtm
 QtdeCopias=1
 
 [MAIL]
@@ -50,3 +50,6 @@ CCo=
 CC=
 Autenticacao=1
 Porta=0
+[CTe]
+NomeCertificado=
+
