Implementação da impressão de DACTE

--- a/demonstracoes/delphi/cteConfig.ini
+++ b/demonstracoes/delphi/cteConfig.ini
@@ -1,7 +1,7 @@
 [CTE]
-UF=
-CNPJ=
-NomeCertificado=
+UF=PR
+CNPJ=08187168000160
+NomeCertificado=CN=TECNOSPEED SA:08187168000160, OU=Certificado PJ A1, O=ICP-Brasil, C=BR, S=, L=, E=, SE=6D 8C 19 04 25 53 86 82
 ArquivoServidoresHom=C:\Program Files\TecnoSpeed\CTe\Demo\cteServidoresHom.ini
 ArquivoServidoresProd=C:\Program Files\TecnoSpeed\CTe\Demo\cteServidoresProd.ini
 TipoCertificado=File
