--- a/demonstracoes/delphi/DemonstracaoCTe.ini
+++ b/demonstracoes/delphi/DemonstracaoCTe.ini
@@ -1,18 +1,19 @@
 [CTE]
 UF=PR
-CNPJ=08187168000160
-NomeCertificado=CN=TECNOSPEED SA:08187168000160, OU=Certificado PJ A1, O=ICP-Brasil, C=BR, S=, L=, E=, SE=6D 8C 19 04 25 53 86 82
-ArquivoServidoresHom=C:\Program Files\TecnoSpeed\CTe\Demo\cteServidoresHom.ini
-ArquivoServidoresProd=C:\Program Files\TecnoSpeed\CTe\Demo\cteServidoresProd.ini
+CNPJ=
+NomeCertificado=
+TOKENSH=
+ArquivoServidoresHom=C:\Program Files\TecnoSpeed\CTe\Arquivos\cteServidoresHom.ini
+ArquivoServidoresProd=C:\Program Files\TecnoSpeed\CTe\Arquivos\cteServidoresProd.ini
 TipoCertificado=File
-DiretorioEsquemas=C:\Program Files\TecnoSpeed\CTe\Demo\Esquemas\
-DiretorioTemplates=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\
+DiretorioEsquemas=C:\Program Files\TecnoSpeed\CTe\Arquivos\Esquemas\
+DiretorioTemplates=C:\Program Files\TecnoSpeed\CTe\Arquivos\Templates\
 DiretorioLog=Log\
 DiretorioLogErro=
 DiretorioTemporario=
 Ambiente=2
 Repositorio=CURRENT_USER_STORE
-ValidarEsquema=1
+ValidarEsquema=0
 PINCODE=
 VersaoManual=3.00
 MaxSizeLoteEnvio=500
@@ -30,8 +31,8 @@ SenhaCertificado=
 
 
 [DACTE]
-ModeloRetrato=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\3.00\DACTE\Retrato.rtm
-ModeloRTMCCe=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\cce\Impressao\modeloCCe.rtm
+ModeloRetrato=retrato.rtm
+ModeloRTMCCe=C:\Program Files\TecnoSpeed\CTe\Arquivos\Templates\cce\Impressao\modeloCCe.rtm
 LogotipoEmitente=tecnospeed.jpg
 FraseHomologacao=SEM VALOR FISCAL
 ModeloPaisagem=
@@ -41,7 +42,7 @@ QtdeCopias=1
 Servidor=smtp.gmail.com
 EmailRemetente=testedacte@gmail.com
 Assunto="Exemplo de envio de DACTE por email"
-Mensagem="O arquivo esta em anexo."
+Mensagem="O arquivo está anexo."
 Usuario=testedacte@gmail.com
 Senha=tecnospeed
 TimeOut=30000
@@ -50,3 +51,6 @@ CCo=
 CC=
 Autenticacao=1
 Porta=0
+
+
+
