--- a/demonstracoes/delphi/cteConfig.ini
+++ b/demonstracoes/delphi/cteConfig.ini
@@ -1,8 +1,8 @@
 [CTE]
-UF=SP
+UF=PR
 CNPJ=00000000000000
-NomeCertificado=
-TOKENSH = uR4BwzifCN2t7Nuf7IOlo4Z0Vbnojlroa13x3dVu
+CNPJSH=00000000000000
+NomeCertificado=CN=
 ArquivoServidoresHom=C:\Program Files\TecnoSpeed\CTe\Arquivos\cteServidoresHom.ini
 ArquivoServidoresProd=C:\Program Files\TecnoSpeed\CTe\Arquivos\cteServidoresProd.ini
 TipoCertificado=File
@@ -28,11 +28,12 @@ Proxy=
 ModoOperacao=NORMAL
 CaminhoCertificado=
 SenhaCertificado=
+HttpLibs=SBB
 
 
 [DACTE]
 ModeloRetrato=retrato.rtm
-ModeloRTMCCe=C:\Program Files\TecnoSpeed\CTe\Arquivos\Templates\cce\Impressao\modeloCCe.rtm
+ModeloRTMCCe=C:\Program Files\TecnoSpeed\CTe\Demo\Templates\cce\Impressao\modeloCCe.rtm
 LogotipoEmitente=tecnospeed.jpg
 FraseHomologacao=SEM VALOR FISCAL
 ModeloPaisagem=
@@ -42,7 +43,7 @@ QtdeCopias=1
 Servidor=smtp.gmail.com
 EmailRemetente=testedacte@gmail.com
 Assunto="Exemplo de envio de DACTE por email"
-Mensagem="O arquivo est√° anexo."
+Mensagem="O arquivo est· anexo."
 Usuario=testedacte@gmail.com
 Senha=tecnospeed
 TimeOut=30000
@@ -51,6 +52,3 @@ CCo=
 CC=
 Autenticacao=1
 Porta=0
-
-
-
